--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
@@ -14,6 +9,19 @@ steps:
   displayName: 'Run a one-line script'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    echo Install Node.js and npm
+    sudo apt-get update
+    sudo apt-get install -y nodejs npm
+    nodejs -v
+    npm -v
+  displayName: 'Install Node.js and npm'
+
+- script: |
+    echo Install Cypress
+    npm install cypress
+  displayName: 'Install Cypress'
+
+- script: |
+    echo Run Cypress tests
+    npx cypress run
+  displayName: 'Run Cypress tests'
